deploy: b54cef5365394f6e94fb478ec76937b198b38726

--- a/drafts/tabletest2.html
+++ b/drafts/tabletest2.html
@@ -10,7 +10,7 @@
 <link rel="modulepreload" href="../_observablehq/client.js">
 <link rel="modulepreload" href="../_observablehq/runtime.js">
 <link rel="modulepreload" href="../_observablehq/stdlib.js">
-<link rel="modulepreload" href="../_import/components/sorterTableClass.818b0a2b.js">
+<link rel="modulepreload" href="../_import/components/sorttable/sorterTableClass.6c30725f.js">
 <link rel="modulepreload" href="../_npm/d3@7.9.0/_esm.js">
 <link rel="modulepreload" href="../_observablehq/stdlib/duckdb.js">
 <link rel="modulepreload" href="../_npm/htl@0.3.1/_esm.js">
@@ -57,11 +57,11 @@ import {define} from "../_observablehq/client.js";
 import {registerFile, FileAttachment} from "../_observablehq/stdlib.js";
 import {registerTable} from "../_observablehq/stdlib/duckdb.js";
 
-registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737752927490});
+registerFile("./../data/oxford_decarbonisation_data.parquet", {"name":"./../data/oxford_decarbonisation_data.parquet","path":"../_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737935084634});
 registerTable("oxford", FileAttachment("../data/oxford_decarbonisation_data.parquet"));
 
-define({id: "e85258d2", outputs: ["sorterTable"], body: async () => {
-const {sorterTable} = await import("../_import/components/sorterTableClass.818b0a2b.js");
+define({id: "7e768334", outputs: ["sorterTable"], body: async () => {
+const {sorterTable} = await import("../_import/components/sorttable/sorterTableClass.6c30725f.js");
 // import { createTable } from "./../components/sorterTable.js";
 
 return {sorterTable};
@@ -134,16 +134,15 @@ const [selected, setSelected] = useState({});
 return {useState,selected,setSelected};
 }});
 
-define({id: "2bc6ef3e", outputs: ["columns2"], body: () => {
+define({id: "2b5d93f7", outputs: ["columns2"], body: () => {
 const columns2 = [
-  { column: "id", unique: true },
+  { column: "id" },
   "lsoa",
-  "insulation_rating",
+  "epc_rating",
   "insulation_ewall",
   { column: "pv_generation", alias: "PV Generation" },
   "ashp_size",
   "substation_demand",
-  "epc_rating",
   "heat_demand",
 ];
 return {columns2};
@@ -510,12 +509,12 @@ return {table};
 </script>
 <div id="observablehq-center">
 <main id="observablehq-main" class="observablehq">
-<div class="observablehq observablehq--block"><!--:e85258d2:--></div>
+<div class="observablehq observablehq--block"><!--:7e768334:--></div>
 <h1 id="table-experiments-2" tabindex="-1"><a class="observablehq-header-anchor" href="#table-experiments-2">Table Experiments 2</a></h1>
 <div class="observablehq observablehq--block"><!--:56d16951:--></div>
 <div class="observablehq observablehq--block"><!--:ee098890:--></div>
 <div class="observablehq observablehq--block"><!--:ec01b706:--></div>
-<div class="observablehq observablehq--block"><!--:2bc6ef3e:--></div>
+<div class="observablehq observablehq--block"><!--:2b5d93f7:--></div>
 <div class="observablehq observablehq--block"><!--:1bcb0b2e:--></div>
 <div class="observablehq observablehq--block"><!--:baf2b79f:--></div>
 <div class="observablehq observablehq--block"><!--:72bf4f2c:--></div>
