--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="modulepreload" href="./_node/@turf/turf@7.1.0/index.js">
 <link rel="modulepreload" href="./_npm/bulma-toast@2.4.4/_esm.js">
 <link rel="modulepreload" href="./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js">
-<link rel="modulepreload" href="./_import/components/sorttable/sorterTableClass.6c30725f.js">
+<link rel="modulepreload" href="./_import/components/sorttable/sorterTableClass.e9501c79.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/timeGlyph.a1969fec.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js">
 <link rel="modulepreload" href="./_import/components/glyph-designs/radialglyph.cbd7ddeb.js">
@@ -216,14 +216,14 @@ import {define} from "./_observablehq/client.js";
 import {registerFile, FileAttachment} from "./_observablehq/stdlib.js";
 import {registerTable} from "./_observablehq/stdlib/duckdb.js";
 
-registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737935084634});
-registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1737935084644});
-registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1737935084644});
-registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1737935084644});
+registerFile("./data/oxford_decarbonisation_data.parquet", {"name":"./data/oxford_decarbonisation_data.parquet","path":"./_file/data/oxford_decarbonisation_data.3c946953.parquet","lastModified":1737979215358});
+registerFile("./data/oxford_lsoa_boundary.geojson", {"name":"./data/oxford_lsoa_boundary.geojson","mimeType":"application/geo+json","path":"./_file/data/oxford_lsoa_boundary.50c731e8.geojson","lastModified":1737979215368});
+registerFile("./data/oxford_lsoas_cartogram.json", {"name":"./data/oxford_lsoas_cartogram.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_cartogram.a72fa2b8.json","lastModified":1737979215368});
+registerFile("./data/oxford_lsoas_regular.json", {"name":"./data/oxford_lsoas_regular.json","mimeType":"application/json","path":"./_file/data/oxford_lsoas_regular.e1c36e7e.json","lastModified":1737979215368});
 registerTable("oxford", FileAttachment("./data/oxford_decarbonisation_data.parquet"));
 
 define({id: "4278f92a", outputs: ["d3","flubber","require","Mutable","turf","bulmaToast","bulmaQuickview","sorterTable","TimeGlyph","GlyphCollection","StreamGraphGlyph","RadialGlyph","RadialGlyphOverall","glyphMap","createDiscretiserValue","_drawCellBackground","OSGB","BudgetAllocator","InterventionManager","MiniDecarbModel","createTimelineInterface","LeafletMap","inferTypes","enrichGeoData","normaliseData","insideCell","debounceInput","saveToSession","getFromSession","transformCoordinates","transformGeometry","normalisebyGroup","aggregateValues"], body: async () => {
-const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {RadialGlyphOverall}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {LeafletMap}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/sorttable/sorterTableClass.6c30725f.js"), import("./_import/components/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js"), import("./_import/components/glyph-designs/radialglyph.cbd7ddeb.js"), import("./_import/components/glyph-designs/radialGlyphOverall.e15902a2.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/decarb-model/mini-decarbonisation.96368c2a.js"), import("./_import/components/decarb-model/timeline.2b635da2.js"), import("./_import/components/leaflet/leaflet-map.498e936b.js"), import("./_import/components/helpers.c82b92f4.js")]);
+const [{require}, {Mutable}, turf, bulmaToast, bulmaQuickview, {sorterTable}, {TimeGlyph, GlyphCollection}, {StreamGraphGlyph}, {RadialGlyph}, {RadialGlyphOverall}, {glyphMap, createDiscretiserValue, _drawCellBackground}, {OSGB}, {BudgetAllocator}, {InterventionManager, MiniDecarbModel}, {createTimelineInterface}, {LeafletMap}, {inferTypes, enrichGeoData, normaliseData, insideCell, debounceInput, saveToSession, getFromSession, transformCoordinates, transformGeometry, normalisebyGroup, aggregateValues}] = await Promise.all([import("./_npm/d3-require@1.3.0/_esm.js"), import("./_observablehq/stdlib.js"), import("./_node/@turf/turf@7.1.0/index.js"), import("./_npm/bulma-toast@2.4.4/_esm.js"), import("./_npm/bulma-quickview@2.0.0/dist/js/bulma-quickview.js"), import("./_import/components/sorttable/sorterTableClass.e9501c79.js"), import("./_import/components/glyph-designs/timeGlyph.a1969fec.js"), import("./_import/components/glyph-designs/mirrorTimeGlyph.5185ad88.js"), import("./_import/components/glyph-designs/radialglyph.cbd7ddeb.js"), import("./_import/components/glyph-designs/radialGlyphOverall.e15902a2.js"), import("./_import/components/gridded-glyphmaps/index.min.f034b425.js"), import("./_import/components/osgb/index.1d2476df.js"), import("./_import/components/decarb-model/budget-allocator.5c9a0a07.js"), import("./_import/components/decarb-model/mini-decarbonisation.96368c2a.js"), import("./_import/components/decarb-model/timeline.2b635da2.js"), import("./_import/components/leaflet/leaflet-map.498e936b.js"), import("./_import/components/helpers.c82b92f4.js")]);
 console.log(">> Importing libraries...");
 const d3 = require("d3", "d3-geo-projection");
 const flubber = require("flubber@0.4");
@@ -486,6 +486,12 @@ display(await(
 define({id: "8fec8410", mode: "inline", inputs: ["resize","createGlyphMap","map_aggregate","display"], body: async (resize,createGlyphMap,map_aggregate,display) => {
 display(await(
 resize((width, height) => createGlyphMap(map_aggregate, width, height))
+))
+}});
+
+define({id: "4744799a", mode: "inline", inputs: ["resize","display"], body: async (resize,display) => {
+display(await(
+resize((width, height) => console.log("width and height", {width, height}))
 ))
 }});
 
@@ -1080,7 +1086,7 @@ playButton.addEventListener("click", () => {
 return {playing,direction,animationFrame,animate};
 }});
 
-define({id: "35c6f694", inputs: ["getFromSession","manager","runModel"], outputs: ["addNewIntervention"], body: (getFromSession,manager,runModel) => {
+define({id: "6266c420", inputs: ["getFromSession","manager","runModel"], outputs: ["addNewIntervention"], body: (getFromSession,manager,runModel) => {
 // Handle form submission: add new intervention
 function addNewIntervention(data) {
   // console.log(Date.now(), "Checking allocations now:", allocations);
@@ -1090,6 +1096,8 @@ function addNewIntervention(data) {
 
   const newConfig = {
     ...data,
+    filters: [],
+    priorities: [],
     yearlyBudgets: yearlyBudgets,
   };
   console.log(">> CONFIG from session", newConfig);
@@ -1269,7 +1277,7 @@ function modifyIntervention(index, newConfig) {
 return {modifyIntervention};
 }});
 
-define({id: "5ddd2f10", inputs: ["interventions","selectedInterventionIndex","getFromSession","stackedRecap","buildingsData"], outputs: ["selectedIntervenedBuildings","flatData","filteredDatafromTableSession","data"], body: (interventions,selectedInterventionIndex,getFromSession,stackedRecap,buildingsData) => {
+define({id: "282db7cf", inputs: ["interventions","selectedInterventionIndex","stackedRecap","buildingsData"], outputs: ["selectedIntervenedBuildings","flatData","data"], body: (interventions,selectedInterventionIndex,stackedRecap,buildingsData) => {
 const selectedIntervenedBuildings =
   interventions[selectedInterventionIndex]?.intervenedBuildings;
 
@@ -1279,8 +1287,6 @@ const flatData = selectedIntervenedBuildings?.map((p) => ({
 }));
 
 console.log(">> Intervened buildings", flatData);
-
-const filteredDatafromTableSession = getFromSession("tableFiltered");
 
 // const data =
 //   selectedInterventionIndex === null
@@ -1294,7 +1300,17 @@ const data =
     ? stackedRecap?.buildings ?? buildingsData
     : flatData;
 // console.log(">> DATA DATA DATA", data);
-return {selectedIntervenedBuildings,flatData,filteredDatafromTableSession,data};
+return {selectedIntervenedBuildings,flatData,data};
+}});
+
+define({id: "9b134d10", inputs: ["getFromSession"], outputs: ["filteredDatafromTableSession"], body: (getFromSession) => {
+const filteredDatafromTableSession = getFromSession("tableFiltered");
+
+console.log(
+  "Filter By IDS",
+  filteredDatafromTableSession.map((d) => d.id)
+);
+return {filteredDatafromTableSession};
 }});
 
 define({id: "8043f7ad", inputs: ["timeline_switch","aggregateValues","data","glyphVariables"], outputs: ["glyphdata"], body: (timeline_switch,aggregateValues,data,glyphVariables) => {
@@ -1305,7 +1321,7 @@ const glyphdata = aggregateValues(data, glyphVariables, "sum", true);
 return {glyphdata};
 }});
 
-define({id: "8812ba21", inputs: ["data"], outputs: ["excludedColumns","customOrder","tableColumns"], body: (data) => {
+define({id: "a65ff9a3", inputs: ["data"], outputs: ["excludedColumns","customOrder","tableColumns"], body: (data) => {
 // Table Data
 const excludedColumns = [
   // "id",
@@ -1319,20 +1335,15 @@ const excludedColumns = [
   "pv_material",
   "gshp_labour",
   "gshp_material",
+  "ashp_suitability",
+  "pv_suitability",
+  "gshp_suitability",
   "substation_headroom_pct",
   "substation_peakload",
   "deprivation_decile",
   // "fuel_poverty_decile",
 ]; // columns to exclude from the table
-const customOrder = [
-  "id",
-  "lsoa",
-  "msoa",
-  "EPC_rating",
-  "ashp_suitability",
-  "pv_suitability",
-  "gshp_suitability",
-];
+const customOrder = ["id", "lsoa", "msoa", "EPC_rating"];
 
 const tableColumns = [
   // { column: "id" },
@@ -1362,7 +1373,7 @@ console.log(">> Define table columns...", tableColumns);
 return {excludedColumns,customOrder,tableColumns};
 }});
 
-define({id: "1c78c411", inputs: ["saveToSession","setSelectedTableRow"], outputs: ["tableChanged"], body: (saveToSession,setSelectedTableRow) => {
+define({id: "47b4cd63", inputs: ["saveToSession","setTableFiltered","setSelectedTableRow"], outputs: ["tableChanged"], body: (saveToSession,setTableFiltered,setSelectedTableRow) => {
 function tableChanged(event) {
   console.log("Table changed:", event);
 
@@ -1371,7 +1382,7 @@ function tableChanged(event) {
     console.log("Filter rule:", event.rule);
     saveToSession("tableFiltered", event.indeces);
 
-    // setTableFiltered(event.indeces);
+    setTableFiltered(event.indeces);
   }
 
   if (event.type === "sort") {
@@ -1417,10 +1428,6 @@ const table = new sorterTable(data, tableColumns, tableChanged, {
   height: "300px",
 });
 return {table};
-}});
-
-define({id: "b6a14afc", body: () => {
-// display(table.getNode());
 }});
 
 define({id: "26c5bc6b", inputs: ["d3"], outputs: ["createRectangle","createTableHeader"], body: (d3) => {
@@ -2798,6 +2805,7 @@ return {createOverallPlot};
           <observablehq-loading></observablehq-loading><!--:eafe6dd4:-->
           <!-- ${html`${playButton} ${morphFactorInput}`} -->
           <observablehq-loading></observablehq-loading><!--:8fec8410:-->
+          <observablehq-loading></observablehq-loading><!--:4744799a:-->
         </div>
       </div>
     </div>
@@ -2919,7 +2927,7 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:a013da47:--></div>
 <!-- ---------------- Functions ---------------- -->
 <!-- Intervention functions -->
-<div class="observablehq observablehq--block"><!--:35c6f694:--></div>
+<div class="observablehq observablehq--block"><!--:6266c420:--></div>
 <div class="observablehq observablehq--block"><!--:d0bca6bd:--></div>
 <div class="observablehq observablehq--block"><!--:569b625c:--></div>
 <div class="observablehq observablehq--block"><!--:6b6d738c:--></div>
@@ -2927,14 +2935,14 @@ return {createOverallPlot};
 <div class="observablehq observablehq--block"><!--:f3e9e975:--></div>
 <div class="observablehq observablehq--block"><!--:8d85d522:--></div>
 <!-- ----------------  D A T A  ---------------- -->
-<div class="observablehq observablehq--block"><!--:5ddd2f10:--></div>
+<div class="observablehq observablehq--block"><!--:282db7cf:--></div>
+<div class="observablehq observablehq--block"><!--:9b134d10:--></div>
 <div class="observablehq observablehq--block"><!--:8043f7ad:--></div>
-<div class="observablehq observablehq--block"><!--:8812ba21:--></div>
-<div class="observablehq observablehq--block"><!--:1c78c411:--></div>
+<div class="observablehq observablehq--block"><!--:a65ff9a3:--></div>
+<div class="observablehq observablehq--block"><!--:47b4cd63:--></div>
 <div class="observablehq observablehq--block"><!--:0ac7290d:--></div>
 <div class="observablehq observablehq--block"><!--:55e7c930:--></div>
 <div class="observablehq observablehq--block"><!--:3bbbd90f:--></div>
-<div class="observablehq observablehq--block"><!--:b6a14afc:--></div>
 <div class="observablehq observablehq--block"><!--:26c5bc6b:--></div>
 <div class="observablehq observablehq--block"><!--:3dc5a5d2:--></div>
 <div class="observablehq observablehq--block"><!--:6e09673d:--></div>
